# Nhom_03_BigData

./: .gitignore  ProjectBD_CuoiKy_Nhom03_DeXuatBanHangTMDT.docx  README.md  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
config/: raw_input_mapping.yaml
docs/: DATA_PIPELINE.md  ERROR_TRACKER.md  HUONG_DAN_UV.md  PROGRESS_TRACKER.md  PROJECT_ARCHITECTURE.md  README.md  STREAMLIT_APP.md
notebooks/: 01_EDA_Olist_Dataset.ipynb  02_Data_Preprocessing.ipynb  03_Feature_Engineering.ipynb  04_00A_Run_Classification.ipynb  04_00B_Run_Regression.ipynb  04_00C_Run_Clustering.ipynb  04_00D_Run_Recommendation_Pattern.ipynb  04_00E_Run_Summary_Visualization.ipynb  04_00_Run_All_Models.ipynb  04_01_Classification_LogisticRegression.ipynb  04_01_Classification_LogisticRegression_CrossValidator.ipynb  04_02_Classification_RandomForest.ipynb  04_02_Classification_RandomForest_CrossValidator.ipynb  04_03_Classification_NaiveBayes.ipynb  04_04_Classification_LinearSVC.ipynb  04_05_Classification_GBTClassifier.ipynb  04_05_Classification_GBTClassifier_CrossValidator.ipynb  04_06_Classification_DecisionTree.ipynb  04_06_Regression_LinearRegression.ipynb  04_06_Regression_LinearRegression_CrossValidator.ipynb  04_07_Regression_DecisionTreeRegressor.ipynb  04_08_Regression_RandomForestRegressor.ipynb  04_09_Clustering_KMeans.ipynb  04_10_Clustering_BisectingKMeans.ipynb  04_11_Clustering_GaussianMixture.ipynb  04_12_Recommendation_ALS.ipynb  04_13_PatternMining_FPGrowth.ipynb  04_14_Model_Comparison_Summary.ipynb  04_15_Model_Evaluation_Visualization.ipynb  (+1 more)
(+106 files in other folders)
