[project]
name = "nhom03-pyspark-project"
version = "1.0.0"
description = "Brazilian E-Commerce Analytics with Apache Spark MLlib"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.28.0",
    "tabulate>=0.9.0",
    "plotly>=5.18.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "python-dotenv>=1.0.0",
    "pyspark==3.5.8",
    "tabulate>=0.10.0",
    "folium>=0.20.0",
    "pymupdf>=1.27.2.2",
]
